# my_cmake

./: .gitignore  README.md
tutorials_1/: CMakeLists.txt  clear.bat  compile.bat  compile.sh  run.bat  tutorial.cpp
tutorials_1/MathFunctions/: my_func.cpp
tutorials_1/source/: CMakeLists.txt  tutorial.cpp
tutorials_1/source/MathFunctions/: CMakeLists.txt  MathFunctions.h
tutorials_1/source/include/: TutorialConfig.h.in
